making small change to see if circle deploys to server

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../../../../favicon.ico">
     <base href="/">
 
-    <title>Workshop App</title>
+    <title>Sketch Workshop WebApp</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
